8244660: Code cache sweeper heuristics is broken

Reviewed-by: thartmann, rehn